# diag-shell

./: Makefile  README.md  diag_repl.py  pyproject.toml
diag_shell/: diag_interpreter.py  output.py
diag_shell/commands/: __init__.py  cpu.py  crontab.py  disk.py  env.py  help.py  mem.py  net.py  ports.py  proc.py  top.py  uptime.py  who.py
diag_shell/utils/: args.py
tests/: conftest.py  test_diag_interpreter.py
tests/test_commands/: test_cpu.py  test_crontab.py  test_disc.py  test_env.py  test_help.py  test_mem.py  test_ports.py  test_proc.py  test_top.py  test_uptime.py  test_who.py
tests/test_utils/: test_args.py
