[project]
name = "diag-shell"
version = "0.1.0"
description = "A pluggable system diagnostics shell interpreter using replkit."
authors = [{ name = "Serge Pierre" }]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

dependencies = [
    "replkit @ git+https://github.com/serge-pierre/replkit.git"
]

[tool.setuptools]
packages = ["diag_shell"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]
